// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render active 1`] = `
<div
  class="wp-components-elevation css-18poqts"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-elevation css-189scdj"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render hover 1`] = `
<div
  class="wp-components-elevation css-ksxoah"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render isInteractive 1`] = `
<div
  class="wp-components-elevation css-17zcr0x"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render offset 1`] = `
<div
  class="wp-components-elevation css-15qtm3h"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-elevation css-1hphd2u"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;
